# Wizcoin

./: README.md  node.py  pyproject.toml
funcoin/: blockchain.py  connections.py  messages.py  peers.py  schema.py  server.py  transactions.py  utils.py
