[tool.poetry]
name = "funcoin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyNaCl = "^1.5.0"
structlog = "^22.3.0"
colorama = "^0.4.6"
marshmallow = "^3.19.0"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
